# cmd

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  configuration.md  contributing.md  examples.md  installation.md  introduction.md  providers.md  security.md  usage.md
docs/theme/: custom.css  custom.js
scripts/: setup.sh
src/: lib.rs  main.rs
src/cli/: mod.rs  output.rs  setup.rs
src/core/: config.rs  credentials.rs  encrypted_file.rs  mod.rs  safety.rs  settings.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
