[package]
name = "cmd"
version = "0.5.0"
edition = "2024"
description = "Natural language CLI tool - translate intentions into terminal commands"
authors = ["Prayson Daniel <praysonpi@gmail.com>"]

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
arboard = "3"
dirs = "6"
exitcode = "1"
keyring = "3"
secrecy = "0.10"
url = "2"
human-panic = "2"
owo-colors = "4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spinoff = "0.8"
terminal_size = "0.4"
toml = "0.8"
ureq = { version = "3", features = ["json"] }

[[bin]]
name = "cmd"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
